--- a/src/mobile/CastAmNow.Mobile/CastAmNow.Mobile/wwwroot/index.html
+++ b/src/mobile/CastAmNow.Mobile/CastAmNow.Mobile/wwwroot/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>CastAmNow.Mobile</title>
     <base href="/" />
-    <link rel="stylesheet" href="_content/CastAmNow.Mobile.Shared/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="_content/CastAmNow.Mobile.Shared/app.css" />
+    <link rel="stylesheet" href="_content/CastAmNow.UI/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/CastAmNow.UI/app.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="CastAmNow.Mobile.styles.css" />
     <link rel="icon" href="data:,">
